# srijan-paul.github.io

./: .gitignore  CHANGELOG.md  README.md  bark.yml  build-loop.py  cabal.project  index.html  install.sh  package-lock.json  publish.py  site  site.cabal  vue.config.js
.obsidian/: appearance.json  workspace.json
_hidden/: The Snap programming language (standard).md
app/: Main.hs
app/Internal/: Date.hs  Rss.hs
assets/css/: common.css  home.css  post.css  theme.css
css/: app.f9d09fe6.css
docs/: index.html  jit-basics-slides.html  robots.txt  rss.xml
docs/.well-known/: atproto-did
docs/about/: index.html
docs/blog/: index.html
docs/copy/: util.js
docs/css/: common.css  home.css  post.css  theme.css
docs/current/: index.html
docs/log/: index.html
docs/now/: index.html
docs/posts/: index.html
docs/static/: highlight.min.js
docs/tags/: Compilers.html  FP.html  GLSL.html  Programming languages.html  TypeScript.html  ai.html  assembler.html  assembly.html  ave.html  blockchain.html  book-review.html  brainfuck.html  c-programming.html  compiler.html  compilers.html  fp.html  games.html  glsl.html  gpu.html  gsoc.html  haskell.html  jam.html  javascript.html  linker.html  love.html  low-level.html  lua.html  math.html  miscellaneous.html  pallene.html  personal.html  post.html  purescript.html  (+10 more)
drafts/: [untitled].md  prescience.md
injuly.in/: bark.yml  hkt.ts
js/: app.656f3674.js  app.656f3674.js.map
public/: index.html
src/: App.vue  about.md  index.md
template/: about.mustache  blog-home.mustache  current.mustache  home.mustache  notes.mustache  now.mustache  post.mustache  tags.mustache
(+219 files in other folders)
