cabal-version:      3.6
name:               site
version:            0.1.0.0

synopsis: Source for my website (injuly.in)

license: MIT

author: Srijan Paul

maintainer: srijannr1@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable site
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.16.4.0,
      unordered-containers,
      bark,
      text-show,
      text
    hs-source-dirs:   app
    default-language: Haskell2010
